--- a/Authorization.Core/Authorization.Core.csproj
+++ b/Authorization.Core/Authorization.Core.csproj
@@ -40,10 +40,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\assets\icon.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
+    <None Include="..\assets\icon.png" Pack="True" PackagePath="\"/>
+    <None Include="..\README.md" Pack="True" PackagePath="\"/>
   </ItemGroup>
 
   <ItemGroup>
