--- a/Authorization.Core.UI/Authorization.Core.UI.csproj
+++ b/Authorization.Core.UI/Authorization.Core.UI.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <AssemblyName>CRFricke.$(MSBuildProjectName)</AssemblyName>
     <RootNamespace>CRFricke.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <IsTrimmable>false</IsTrimmable>
   </PropertyGroup>
 
@@ -62,10 +62,13 @@
   
   <!-- The remainder of this project file generates the build files required to pack the static web assets for the NuGet package. -->
   <!-- Based on Microsoft.AspNetCore.Identity.UI project file located at: --> 
-  <!--   https://github.com/dotnet/aspnetcore/blob/main/src/Identity/UI/src/Microsoft.AspNetCore.Identity.UI.csproj --> 
+  <!--   https://github.com/dotnet/aspnetcore/blob/main/src/Identity/UI/src/Microsoft.AspNetCore.Identity.UI.csproj -->
+
   <PropertyGroup>
-    <ProvideApplicationPartFactoryAttributeTypeName>Microsoft.AspNetCore.Mvc.ApplicationParts.NullApplicationPartFactory, Microsoft.AspNetCore.Mvc.Core</ProvideApplicationPartFactoryAttributeTypeName>
+    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <DisableStaticWebAssetsBuildPropsFileGeneration>true</DisableStaticWebAssetsBuildPropsFileGeneration>
+    <DisableStaticWebAssetEndpointsBuildPropsFileGeneration>true</DisableStaticWebAssetEndpointsBuildPropsFileGeneration>
+    <ProvideApplicationPartFactoryAttributeTypeName>Microsoft.AspNetCore.Mvc.ApplicationParts.NullApplicationPartFactory, Microsoft.AspNetCore.Mvc.Core</ProvideApplicationPartFactoryAttributeTypeName>
     <StaticWebAssetsDisableProjectBuildPropsFileGeneration>true</StaticWebAssetsDisableProjectBuildPropsFileGeneration>
     <StaticWebAssetsDisableProjectBuildMultiTargetingPropsFileGeneration>true</StaticWebAssetsDisableProjectBuildMultiTargetingPropsFileGeneration>
     <StaticWebAssetsDisableProjectBuildTransitivePropsFileGeneration>true</StaticWebAssetsDisableProjectBuildTransitivePropsFileGeneration>
@@ -95,10 +98,18 @@
         <ContentRoot>$([System.IO.Path]::GetFullPath($(_ReferenceAssetContentRoot)))</ContentRoot>
       </ReferenceAssetCandidates>
     </ItemGroup>
-    
-    <DefineStaticWebAssets Condition="'@(ReferenceAssetCandidates-&gt;Count())' != '0'" CandidateAssets="@(ReferenceAssetCandidates)" SourceId="$(PackageId)" SourceType="Project" AssetKind="All" BasePath="$(StaticWebAssetBasePath)">
+
+    <DefineStaticWebAssets
+      Condition="'@(ReferenceAssetCandidates->Count())' != '0'"
+      CandidateAssets="@(ReferenceAssetCandidates)"
+      SourceId="$(PackageId)"
+      SourceType="Project"
+      AssetKind="All"
+      BasePath="$(StaticWebAssetBasePath)"
+      >
       <Output TaskParameter="Assets" ItemName="ReferenceAsset" />
     </DefineStaticWebAssets>
+
     <ItemGroup>
       <ReferenceAsset>
         <ResultType>StaticWebAsset</ResultType>
@@ -112,28 +123,89 @@
       <BS4AssetCandidates>
         <RelativePath>%(RecursiveDir)%(FileName)%(Extension)</RelativePath>
       </BS4AssetCandidates>
-      
       <BS5AssetCandidates Include="assets\BS5\**" />
       <BS5AssetCandidates>
         <RelativePath>%(RecursiveDir)%(FileName)%(Extension)</RelativePath>
       </BS5AssetCandidates>
     </ItemGroup>
-    
-    <DefineStaticWebAssets Condition="'@(BS4AssetCandidates-&gt;Count())' != '0'" CandidateAssets="@(BS4AssetCandidates)" SourceId="$(PackageId)" SourceType="Discovered" AssetKind="All" ContentRoot="assets/BS4" BasePath="$(StaticWebAssetBasePath)">
+
+    <DefineStaticWebAssets 
+	  Condition="'@(BS4AssetCandidates->Count())' != '0'" 
+	  CandidateAssets="@(BS4AssetCandidates)" 
+	  SourceId="$(PackageId)" 
+	  SourceType="Discovered" 
+	  AssetKind="All" 
+	  ContentRoot="assets/BS4" 
+	  BasePath="$(StaticWebAssetBasePath)"
+	  >
       <Output TaskParameter="Assets" ItemName="BS4Assets" />
     </DefineStaticWebAssets>
-    
-    <DefineStaticWebAssets Condition="'@(BS5AssetCandidates-&gt;Count())' != '0'" CandidateAssets="@(BS5AssetCandidates)" SourceId="$(PackageId)" SourceType="Discovered" AssetKind="All" ContentRoot="assets/BS5" BasePath="$(StaticWebAssetBasePath)">
+
+	<DefineStaticWebAssets 
+	  Condition="'@(BS5AssetCandidates->Count())' != '0'" 
+	  CandidateAssets="@(BS5AssetCandidates)" 
+	  SourceId="$(PackageId)" 
+	  SourceType="Discovered" 
+	  AssetKind="All" 
+	  ContentRoot="assets/BS5" 
+	  BasePath="$(StaticWebAssetBasePath)"
+	  >
       <Output TaskParameter="Assets" ItemName="BS5Assets" />
     </DefineStaticWebAssets>
 
-    <GenerateStaticWebAsssetsPropsFile StaticWebAssets="@(BS4Assets)" PackagePathPrefix="staticwebassets/BS4" TargetPropsFilePath="$(IntermediateOutputPath)AuthUI.BS4.targets" />
-    <GenerateStaticWebAsssetsPropsFile StaticWebAssets="@(BS5Assets)" PackagePathPrefix="staticwebassets/BS5" TargetPropsFilePath="$(IntermediateOutputPath)AuthUI.BS5.targets" />
+    <DefineStaticWebAssetEndpoints
+      Condition="'@(BS4Assets)' != ''"
+      CandidateAssets="@(BS4Assets)"
+      ExistingEndpoints="@()"
+      ContentTypeMappings="@(StaticWebAssetContentTypeMapping)"
+      >
+      <Output TaskParameter="Endpoints" ItemName="BS4AssetEndpoints" />
+    </DefineStaticWebAssetEndpoints>
+    
+    <DefineStaticWebAssetEndpoints
+      Condition="'@(BS5Assets)' != ''"
+      CandidateAssets="@(BS5Assets)"
+      ExistingEndpoints="@()"
+      ContentTypeMappings="@(StaticWebAssetContentTypeMapping)"
+      >
+      <Output TaskParameter="Endpoints" ItemName="BS5AssetEndpoints" />
+    </DefineStaticWebAssetEndpoints>
 
-    <ComputeStaticWebAssetsTargetPaths Assets="@(BS4Assets)" PathPrefix="staticwebassets/BS4" AdjustPathsForPack="true">
+    <GenerateStaticWebAssetsPropsFile 
+	  StaticWebAssets="@(BS4Assets)" 
+	  PackagePathPrefix="staticwebassets/BS4" 
+	  TargetPropsFilePath="$(IntermediateOutputPath)AuthUI.BS4.targets" 
+	  />
+	<GenerateStaticWebAssetsPropsFile 
+	  StaticWebAssets="@(BS5Assets)" 
+	  PackagePathPrefix="staticwebassets/BS5" 
+	  TargetPropsFilePath="$(IntermediateOutputPath)AuthUI.BS5.targets" 
+	  />
+
+    <GenerateStaticWebAssetEndpointsPropsFile
+      StaticWebAssets="@(BS4Assets)"
+      StaticWebAssetEndpoints="@(BS4AssetEndpoints)"
+      TargetPropsFilePath="$(IntermediateOutputPath)AuthUI.BS4.endpoints.targets" 
+	  />
+
+    <GenerateStaticWebAssetEndpointsPropsFile
+      StaticWebAssets="@(BS5Assets)"
+      StaticWebAssetEndpoints="@(BS5AssetEndpoints)"
+      TargetPropsFilePath="$(IntermediateOutputPath)AuthUI.BS5.endpoints.targets" 
+	  />
+
+    <ComputeStaticWebAssetsTargetPaths 
+	  Assets="@(BS4Assets)" 
+	  PathPrefix="staticwebassets/BS4" 
+	  AdjustPathsForPack="true"
+	  >
       <Output TaskParameter="AssetsWithTargetPath" ItemName="_PackStaticWebAssetWithTargetPath" />
     </ComputeStaticWebAssetsTargetPaths>
-    <ComputeStaticWebAssetsTargetPaths Assets="@(BS5Assets)" PathPrefix="staticwebassets/BS5" AdjustPathsForPack="true">
+    <ComputeStaticWebAssetsTargetPaths 
+	  Assets="@(BS5Assets)" 
+	  PathPrefix="staticwebassets/BS5" 
+	  AdjustPathsForPack="true"
+	  >
       <Output TaskParameter="AssetsWithTargetPath" ItemName="_PackStaticWebAssetWithTargetPath" />
     </ComputeStaticWebAssetsTargetPaths>
 
@@ -141,8 +213,14 @@
       <StaticWebAssetPackageFile Include="$(IntermediateOutputPath)AuthUI.BS4.targets">
         <PackagePath>build\Microsoft.AspNetCore.StaticWebAssets.BS4.targets</PackagePath>
       </StaticWebAssetPackageFile>
+      <StaticWebAssetPackageFile Include="$(IntermediateOutputPath)AuthUI.BS4.endpoints.targets">
+        <PackagePath>build\Microsoft.AspNetCore.StaticWebAssets.BS4.endpoints.targets</PackagePath>
+      </StaticWebAssetPackageFile>
       <StaticWebAssetPackageFile Include="$(IntermediateOutputPath)AuthUI.BS5.targets">
         <PackagePath>build\Microsoft.AspNetCore.StaticWebAssets.BS5.targets</PackagePath>
+      </StaticWebAssetPackageFile>
+      <StaticWebAssetPackageFile Include="$(IntermediateOutputPath)AuthUI.BS5.endpoints.targets">
+        <PackagePath>build\Microsoft.AspNetCore.StaticWebAssets.BS5.endpoints.targets</PackagePath>
       </StaticWebAssetPackageFile>
     </ItemGroup>
   </Target>
